<resources>
    <string name="app_name">MusicStructureApp</string>

    <!-- navigation Strings-->
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="stations">Stations</string>
    <string name="playlists">Playlists</string>
    <string name="store">Store</string>

    <!-- Notes -->
    <string name="catergory">Category</string>
    <string name="music">Music</string>
    <string name="Song">Song</string>
    <string name="noPlayLists">No Playlists</string>
    <string name="StoreNotes"></string>
</resources>
