<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playlists"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicstructureapp.Playlists">
    <!--Navigation Start -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/mainControls"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/categories"
            style="@style/Controls"
            android:text="@string/categories" />
        <TextView
            android:id="@+id/stations"
            style="@style/Controls"
            android:text="@string/stations" />
        <TextView
            android:id="@+id/home"
            style="@style/Controls"
            android:text="@string/home" />
        <TextView
            android:id="@+id/store"
            style="@style/Controls"
            android:text="@string/store" />
    </LinearLayout>
    <!--Navigation End -->
    <TextView
        android:layout_below="@id/mainControls"
        android:layout_width="match_parent"
        android:textSize="48sp"
        android:gravity="center"
        android:text="@string/noPlayLists"
        android:layout_height="wrap_content" />

</RelativeLayout>
