<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_categories"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicstructureapp.Categories">

    <!--Navigation Start -->
    <LinearLayout
        android:id="@+id/mainControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home"
            style="@style/Controls"
            android:text="@string/home" />

        <TextView
            android:id="@+id/stations"
            style="@style/Controls"
            android:text="@string/stations" />

        <TextView
            android:id="@+id/playlists"
            style="@style/Controls"
            android:text="@string/playlists" />

        <TextView
            android:id="@+id/store"
            style="@style/Controls"
            android:text="@string/store" />
    </LinearLayout>
    <!--Navigation End -->
</RelativeLayout>
