<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_store"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicstructureapp.Store">
    <!--Navigation Start -->
    <LinearLayout
        android:id="@+id/mainControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/categories"
            style="@style/Controls"
            android:text="@string/categories" />

        <TextView
            android:id="@+id/stations"
            style="@style/Controls"
            android:text="@string/stations" />

        <TextView
            android:id="@+id/playlists"
            style="@style/Controls"
            android:text="@string/playlists" />

        <TextView
            android:id="@+id/home"
            style="@style/Controls"
            android:text="@string/home" />
    </LinearLayout>
    <!--Navigation End -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mainControls">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView style="@style/musicAlbum" />

                <TextView style="@style/musicAlbum" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView style="@style/musicAlbum" />

                <TextView style="@style/musicAlbum" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView style="@style/musicAlbum" />

                <TextView style="@style/musicAlbum" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView style="@style/musicAlbum" />

                <TextView style="@style/musicAlbum" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView style="@style/musicAlbum" />

                <TextView style="@style/musicAlbum" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
