<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stations"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicstructureapp.Stations">
    <!--Navigation Start -->
    <LinearLayout
        android:id="@+id/mainControls"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight=".5"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/categories"
            style="@style/Controls"
            android:text="@string/categories" />
        <TextView
            android:id="@+id/home"
            style="@style/Controls"
            android:text="@string/home" />
        <TextView
            android:id="@+id/playlists"
            style="@style/Controls"
            android:text="@string/playlists" />
        <TextView
            android:id="@+id/store"
            style="@style/Controls"
            android:text="@string/store" />
    </LinearLayout>
    <!--Navigation End -->
    <ScrollView
        android:layout_below="@id/mainControls"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/Category"/>
                <TextView
                    style="@style/Category"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/Category"/>
                <TextView
                    style="@style/Category"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/Category"/>
                <TextView
                    style="@style/Category"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/Category"/>
                <TextView
                    style="@style/Category"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/Category"/>
                <TextView
                    style="@style/Category"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
